--- a/index.html
+++ b/index.html
@@ -62,28 +62,18 @@
                           </a>
                         </div>
                     </div>
-                    <a class="navbar-item">
+                    <a href="nosotros.html" class="navbar-item">
                        Nosotros
                     </a>
-                    <a class="navbar-item">
+                    <a href="contacto.html" class="navbar-item">
                         Contacto
                     </a>
-                    <a class="navbar-item">
+                    <a href="faq.html" class="navbar-item">
                         FAQs
                     </a>
-                    <a class="navbar-item">
+                    <a href="booking.html" class="navbar-item">
                         Booking
                     </a>
-                    <a class="navbar-item">
-                        Log in
-                    </a>
-                    <div class="navbar-item">
-                      <div class="buttons">
-                        <a class="button is-black registro-btn">
-                          Registro
-                        </a>
-                      </div>
-                    </div>
                   </div>
                 </div>
               </nav>
@@ -281,17 +271,17 @@
                 <div class="content has-text-centered">
                     <ul class="footer-social-media">
                         <li>
-                            <a class="icon" href="#">
+                            <a class="icon" href="https://github.com/dansup/bulma-templates">
                                 <i class="fa fa-instagram"></i>
                             </a>
                         </li>
                         <li>
-                            <a class="icon" href="#">
+                            <a class="icon" href="https://github.com/dansup/bulma-templates">
                                 <i class="fa fa-facebook"></i>
                             </a>
                         </li>
                         <li>
-                            <a class="icon" href="#">
+                            <a class="icon" href="https://github.com/dansup/bulma-templates">
                                 <i class="fa fa-twitter"></i>
                             </a>
                         </li>
@@ -313,7 +303,7 @@
         });
     </script>
 
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script src="js/bulma.js"></script>
 </body>
 
